# pytorch-android-cpp-demo

./: CMakeLists.txt  README.md  build.sh  build_android.sh  predictor.cpp
